<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".ui.activity.onboard.OnBoardActivity">


    <TextView
        android:id="@+id/tvGuestLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:text="@string/guest_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="0.1"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/pager_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvGuestLogin"
        app:layout_constraintBottom_toTopOf="@+id/llContainer"
        app:layout_constraintVertical_weight="0.7"
        >

        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_280sdp"
            android:padding="@dimen/_25sdp"
            app:layout_constraintTop_toTopOf="@+id/pager_constraint"/>

        <LinearLayout
            android:id="@+id/indicator"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@+id/view_pager"
            />


    </android.support.constraint.ConstraintLayout>



        <android.support.constraint.ConstraintLayout
            android:id="@+id/llContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@+id/pager_constraint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_weight="0.2"
            >

            <Button
                android:id="@+id/sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@color/orange"
                android:text="@string/sign_in"
                android:textColor="#FFF"
                android:elevation="@dimen/_5sdp"
                app:layout_constraintTop_toTopOf="@+id/llContainer"/>

            <Button
                android:id="@+id/sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:elevation="@dimen/_5sdp"
                app:layout_constraintTop_toBottomOf="@+id/sign_in"
                app:layout_constraintBottom_toBottomOf="@+id/llContainer"/>

        </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>